[gd_scene load_steps=10 format=2]

[ext_resource path="res://Menus/RecordsScreen.gd" type="Script" id=1]
[ext_resource path="res://Source/Images/UI/return.png" type="Texture" id=2]
[ext_resource path="res://Source/VFX/unshaded.tres" type="Material" id=3]
[ext_resource path="res://Source/Images/UI/metalPanel_plate.png" type="Texture" id=4]
[ext_resource path="res://Menus/RecordEntry.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "RESET"
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Control:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1330, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Control:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 50, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
resource_name = "hide"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Control:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 50, -0.00146925, 3.69416, 0.3, -754.295, 1330, -0.9, -17.4111, 1.57997, 30.5656 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Control:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 50, -0.25, 0, 0.25, 0, 50, -0.25, 0, 0.2, -174.522 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="Animation" id=3]
resource_name = "show"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Control:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1330, -0.000290768, 3.6943, 0.2, -2541.06, 50, -0.6, 125.569, 0.841744, -176.161 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Control:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 50, -0.25, 0, 0.25, 0, 50, -0.25, 0, 0.2, -174.522 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 80, 80 )
margin_left = 7.0
margin_right = 7.0
margin_top = 7.0
margin_bottom = 7.0
modulate_color = Color( 0, 0.741176, 1, 0.211765 )

[node name="RecordsScreen" type="Node"]
script = ExtResource( 1 )
RecordEntry = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/RESET = SubResource( 1 )
anims/hide = SubResource( 2 )
anims/show = SubResource( 3 )

[node name="Control" type="Panel" parent="."]
material = ExtResource( 3 )
margin_left = 1330.0
margin_top = 50.0
margin_right = 2510.0
margin_bottom = 670.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="Control"]
use_parent_material = true
margin_left = 100.0
margin_top = 68.0
margin_right = 1080.0
margin_bottom = 520.0
custom_styles/panel = SubResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
use_parent_material = true
margin_right = 980.0
margin_bottom = 48.0

[node name="RecordEntry" parent="Control/Panel/VBoxContainer" instance=ExtResource( 5 )]

[node name="HSeparator" type="HSeparator" parent="Control/Panel"]
use_parent_material = true
margin_left = 20.0
margin_top = 52.0
margin_right = 960.0
margin_bottom = 56.0

[node name="RecordEntriesContainer" type="ScrollContainer" parent="Control/Panel"]
use_parent_material = true
margin_top = 58.0
margin_right = 980.0
margin_bottom = 452.0
follow_focus = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/RecordEntriesContainer"]

[node name="Back" type="Button" parent="Control"]
use_parent_material = true
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -78.0
margin_right = 176.0
text = "Back"
icon = ExtResource( 2 )
flat = true

[node name="Label" type="Label" parent="Control"]
use_parent_material = true
margin_top = 10.0
margin_right = 1180.0
margin_bottom = 58.0
text = "Leaderboard"
align = 1
valign = 1

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="Control/Back" to="." method="_on_Button_pressed"]
